--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies" : {
     },
     "devDependencies" : {
+        "nodeunit" : ">= 0.6.4",
         "sandboxed-module" : "*"
     },
     "engine" : {
